# PyClickHouseMigrator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.txt  Dockerfile  Makefile  README.md  Taskfile.yml  conftest.py  docker-compose.cluster.yml  docker-compose.test.yml  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt  setup.py  test_migrator.py  tests.py
.github/workflows/: ci.yml  dockerhub-description.yml  docs.yml  release.yml
clickhouse_migrate/: cli.py
clickhouse_migrator/: cli.py
docs/: 2.0-migration-guide.md  README.md  baseline.md  ci-cd.md  cluster-mode.md  docker.md  index.md  known-limitations.md  migration-format.md  python-api.md  release-2.0.md  troubleshooting.md
docs/examples/: basic-migration.sql  cluster-migration.sql  github-actions.yml  kubernetes-job.yml
docs/stylesheets/: extra.css
py_clickhouse_migrate/: cli.py  migrator.py
py_clickhouse_migrator/: __init__.py  checksum.py  cli.py  errors.py  lock.py  migration_parser.py  migrator.py
scripts/: wait_cluster_ready.py
src/py_clickhouse_migrate/: cli.py  main.py  migrator.py  template.py
tests/: conftest.py  helpers.py  test_checksum.py  test_cli.py  test_cluster.py  test_lock.py  test_migration_parser.py  test_migrator.py  test_retry.py  test_validation.py
tests/cluster_config/keeper/: keeper_config.xml
tests/cluster_config/node01/: cluster_config.xml
tests/cluster_config/node02/: cluster_config.xml
