[project]
name = "py-clickhouse-migrator"
version = "0.3"
description = "Simple tool for manage ClickHouse migrations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Maksim Burtsev", email = "zadrot-lol@list.ru" },
]
classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.1",
    "clickhouse-driver>=0.2.0",
    "python-dotenv>=1.0.0",
    "termcolor>=2.0.0",
]

[project.scripts]
migrator = "py_clickhouse_migrator.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-sugar>=1.0",
    "ruff>=0.15",
    "pre-commit>=4.0",
    "mypy>=1.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

select = [
  "E",  # pycodestyle Error
  "F",  # Pyflakes
  "B",  # flake8-bugbear
  "W",  # pycodestyle Warning
  "I",  # isort
  "N",  # pep8-naming
  "D",  # pydocstyle
  "PL", # Pylint
]
ignore = [
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "F403",
  "F405",
  "D102",
  "D100",
  "D101",
  "D103",
  "I001",
  "PLW0603",
  "PLR0913",
  "PLR0915",
  "PLR0911",
  "PLR0912",
  "B008",
  "D202",
  "D213",
  "D105",
  "D400",
  "D415",
  "D106",
  "PLR2004",
  "PLW2901",
  "D104",
  "B905",
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
line-ending = "auto"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["."]
