[project]
name = "py-clickhouse-migrator"
version = "0.3"
description = "Python CLI tool for ClickHouse schema migrations with distributed locking and cluster support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Maksim Burtsev", email = "zadrot-lol@list.ru" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Environment :: Console",
    "Typing :: Typed",
]
keywords = [
    "clickhouse",
    "migrations",
    "database",
    "schema",
    "cli",
    "distributed-locking",
    "cluster",
]
dependencies = [
    "click>=8.0.1",
    "clickhouse-driver>=0.2.0",
    "termcolor>=2.0.0",
]

[project.scripts]
migrator = "py_clickhouse_migrator.cli:main"

[project.urls]
Homepage = "https://github.com/Maksim-Burtsev/PyClickHouseMigrator"
Repository = "https://github.com/Maksim-Burtsev/PyClickHouseMigrator"
Issues = "https://github.com/Maksim-Burtsev/PyClickHouseMigrator/issues"
Changelog = "https://github.com/Maksim-Burtsev/PyClickHouseMigrator/releases"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-sugar>=1.0",
    "ruff>=0.15",
    "pre-commit>=4.0",
    "mypy>=1.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle Error
  "F",  # Pyflakes
  "B",  # flake8-bugbear
  "W",  # pycodestyle Warning
  "I",  # isort
  "N",  # pep8-naming
  "D",  # pydocstyle
  "PL", # Pylint
]
ignore = [
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "F403",
  "F405",
  "D102",
  "D100",
  "D101",
  "D103",
  "I001",
  "PLW0603",
  "PLR0913",
  "PLR0915",
  "PLR0911",
  "PLR0912",
  "B008",
  "D202",
  "D213",
  "D105",
  "D400",
  "D415",
  "D106",
  "PLR2004",
  "PLW2901",
  "PLR1704",
  "D104",
  "B905",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
per-file-ignores = {}

[tool.ruff.format]
line-ending = "auto"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "clickhouse_driver.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not cluster'"
markers = [
    "cluster: tests requiring 2-node ClickHouse cluster (run with pytest -m cluster)",
]
